# aws-benchmarks

./: .gitignore  Cargo.toml  README.md  lib.rs
aws-s3-common/: Cargo.toml
aws-s3-common/src/: lib.rs  transfers.rs
aws-sdk-rust-async/: Cargo.toml
aws-sdk-rust-async/benches/: aws-sdk-rust-async.rs
aws-sdk-rust-async/src/: download.rs  downloads.rs  lib.rs  main.rs  upload.rs
aws-sdk-rust-s3-async/: Cargo.toml
aws-sdk-rust-s3-async/benches/: aws-sdk-rust-async.rs
aws-sdk-rust-s3-async/src/: download.rs  lib.rs  main.rs  upload.rs
rusoto-async/: Cargo.toml
rusoto-async/src/: download.rs  main.rs  upload.rs
rusoto-s3-async/: Cargo.toml
rusoto-s3-async/benches/: rusoto-async.rs
rusoto-s3-async/src/: download.rs  lib.rs  main.rs  upload.rs
rusoto-s3-blocking/: Cargo.toml
rusoto-s3-blocking/benches/: rusoto-blocking.rs
rusoto-s3-blocking/src/: download.rs  main.rs
rust-s3-async/: Cargo.toml
rust-s3-async/benches/: rust-s3-async.rs
rust-s3-async/src/: download.rs  lib.rs  main.rs  upload.rs
rust-s3-blocking/: Cargo.toml
rust-s3-blocking/benches/: rust-s3-blocking.rs
rust-s3-blocking/src/: download.rs  main.rs  upload.rs
