[package]
name = "rusoto-async"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2018"

[dependencies]
jemallocator = "0.3.0"
env_logger = "0.8"
hyper = "0.14.9"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "rusoto-async"
harness = false