[package]
name = "rusoto-blocking"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2018"

[dependencies]
jemallocator = "0.3.0"
env_logger = "0.8"
hyper = "0.14.9"
hyper-tls = "0.5.0"
serde = "^1"
serde_derive = "^1"
tokio = { version = "1.7.1", features = ["full"] }
envy = { version = "0.4.2" }

rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "rusoto-blocking"
harness = false