[package]
name = "rust-s3-async"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2018"

[dependencies]
jemallocator = "0.3.2"
rust-s3 = { default-features = false, version = "0.27.0-beta11", features = ["tokio-rustls-tls"] }
tokio = { version = "1.7.1" }
envy = { version = "0.4.2" }
serde = "^1"
serde_derive = "^1"