[package]
name = "rust-s3-blocking"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2018"

[dependencies]
jemallocator = "0.3.2"
rust-s3 = { version = "0.26.4", features = ["rustls-tls"] }
serde = "^1"
serde_derive = "^1"

tokio = { version = "1.7.1" }
envy = { version = "0.4.2" }
