[package]
name = "rust-s3-blocking"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2018"

[dependencies]
jemallocator = "0.3.2"
rust-s3 = { version = "0.26.4", features = ["rustls-tls"] }
serde = { version = "^1", features = ["derive"] }

envy = { version = "0.4.2" }
